# bhinneka-mcp

./: .dockerignore  AGENTS.md  AUTH.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  ruff.toml
.serena/: project.yml
src/bhinneka/: __init__.py  airport_data.py  auth_middleware.py  cli.py  models.py  server.py
src/bhinneka/tools/: __init__.py  context7.py  fetch.py  flights.py  searx.py
src/google_flights_mcp/: __init__.py  cli.py  models.py  server.py
