[project]
name = "google-flights-mcp"
version = "0.1.0"
description = "A FastMCP server for accessing Google Flights data via Model Context Protocol"
authors = [
    { name = "Batista Harahap", email = "batista@bango29.com" }
]
dependencies = [
    "fastmcp>=2.12.3",
    "fast-flights>=2.2",
    "typer>=0.17.4",
    "rich>=14.1.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
google-flights-mcp = "google_flights_mcp.cli:main"
gf = "google_flights_mcp.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.13.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/google_flights_mcp"]
